--- a/style.css
+++ b/style.css
@@ -49,6 +49,16 @@ h2,h3,p,li,.nav-item{
   text-decoration-style: solid;
 }
 
+.cv-btn {
+  width:200px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #292929;
+  color: #FFFFFF;
+}
+
 .card{
   box-shadow: 10px 10px 5px #888888;
   background-color: black;
@@ -64,4 +74,32 @@ h2,h3,p,li,.nav-item{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+#contact-btn a{
+  color: #FFFFFF;
+  font-size: 1rem;
+  font-family: 'Ubuntu', sans-serif;
+  width: 150px;
+  height: 40px;
+  margin: 10px;
+  background-color: #1e1e1e;
+  box-shadow: 2px 5px 6px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#contact-btn:hover {
+  background-color: #17d1ac;
+  color: #000000;
+  transition: all ease 0.5s;
+  font-weight: 700;
+}
+
+.nav-item:hover{
+  background-color: #17d1ac;
+  color: #000000;
+  transition: all ease 0.5s;
+  font-weight: 700;
 }
